; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_http-tx-mgr.c_transition_state.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_http-tx-mgr.c_transition_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32, i32, i64, i32 }

@.str = private unnamed_addr constant [53 x i8] c"Transfer repo '%.8s': ('%s', '%s') --> ('%s', '%s')\0A\00", align 1
@HTTP_TASK_RT_STATE_FINISHED = common dso_local global i32 0, align 4
@HTTP_TASK_TYPE_DOWNLOAD = common dso_local global i64 0, align 8
@HTTP_TASK_STATE_FINISHED = common dso_local global i32 0, align 4
@seaf = common dso_local global %struct.TYPE_6__* null, align 8
@REPO_PROP_DOWNLOAD_HEAD = common dso_local global i32 0, align 4
@EMPTY_SHA1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32, i32)* @transition_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @transition_state(%struct.TYPE_5__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @http_task_state_to_str(i32 %12)
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @http_task_rt_state_to_str(i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @http_task_state_to_str(i32 %18)
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @http_task_rt_state_to_str(i32 %20)
  %22 = call i32 @seaf_message(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %13, i32 %17, i32 %19, i32 %21)
  %23 = load i32, i32* %5, align 4
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = icmp ne i32 %23, %26
  br i1 %27, label %28, label %32

28:                                               ; preds = %3
  %29 = load i32, i32* %5, align 4
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 8
  br label %32

32:                                               ; preds = %28, %3
  %33 = load i32, i32* %6, align 4
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 1
  store i32 %33, i32* %35, align 4
  %36 = load i32, i32* %6, align 4
  %37 = load i32, i32* @HTTP_TASK_RT_STATE_FINISHED, align 4
  %38 = icmp eq i32 %36, %37
  br i1 %38, label %39, label %62

39:                                               ; preds = %32
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 2
  %42 = load i64, i64* %41, align 8
  %43 = load i64, i64* @HTTP_TASK_TYPE_DOWNLOAD, align 8
  %44 = icmp eq i64 %42, %43
  br i1 %44, label %45, label %59

45:                                               ; preds = %39
  %46 = load i32, i32* %5, align 4
  %47 = load i32, i32* @HTTP_TASK_STATE_FINISHED, align 4
  %48 = icmp eq i32 %46, %47
  br i1 %48, label %49, label %59

49:                                               ; preds = %45
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** @seaf, align 8
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 3
  %55 = load i32, i32* %54, align 8
  %56 = load i32, i32* @REPO_PROP_DOWNLOAD_HEAD, align 4
  %57 = load i32, i32* @EMPTY_SHA1, align 4
  %58 = call i32 @seaf_repo_manager_set_repo_property(i32 %52, i32 %55, i32 %56, i32 %57)
  br label %59

59:                                               ; preds = %49, %45, %39
  %60 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %61 = call i32 @emit_transfer_done_signal(%struct.TYPE_5__* %60)
  br label %62

62:                                               ; preds = %59, %32
  ret void
}

declare dso_local i32 @seaf_message(i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @http_task_state_to_str(i32) #1

declare dso_local i32 @http_task_rt_state_to_str(i32) #1

declare dso_local i32 @seaf_repo_manager_set_repo_property(i32, i32, i32, i32) #1

declare dso_local i32 @emit_transfer_done_signal(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
